@@ -108,6 +108,7 @@
         <textcolor>dialog_fg_70</textcolor>
         <texturefocus colordiffuse="$VAR[ColorHighlight]" border="5">common/box.png</texturefocus>
         <alttexturefocus colordiffuse="$VAR[ColorHighlight]" border="5">common/box.png</alttexturefocus>
+        <alttexturenofocus colordiffuse="dialog_fg_12" border="5">common/box.png</alttexturenofocus>
     </include>
 
     <include name="Dialog_Standard_Right_Grouplist">
