@@ -3,6 +3,7 @@ VIEWTYPES - Fix for Big Posters with Codec Info on
 WIDGETS - Fix busy spinner for mouse mode
 VIDEOINFO - Make subtitles and audio language distinction clearer
 VIDEOINFO - Add duration to extras
+SKINSHORTCUTS - Add Enable/Disable toggle
 
 [B]0.9.25[/B]
 VIEWTYPES - Add Square Wall Large
